[package]
name = "noodle"
version = "0.1.0"
authors = ["Hazim Salem <bodyweightenergy@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Streaming parser utilities"
repository = "https://github.com/bodyweightenergy/noodle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
thiserror = "1.0"