[package]
name = "noodle"
version = "0.2.0"
authors = ["Hazim Salem <bodyweightenergy@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Streaming parser utilities"
repository = "https://github.com/bodyweightenergy/noodle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"